--- a/06-azure-kubernetes-ci-cd-pipeline.yml
+++ b/06-azure-kubernetes-ci-cd-pipeline.yml
@@ -5,9 +5,7 @@ resources:
 - repo: self
 
 variables:
-  tag: 17 
-
-#'$(Build.BuildId)'
+  tag: '$(Build.BuildId)'
 
 stages:
 - stage: Build
@@ -18,14 +16,14 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    # - task: Docker@2
-    #   displayName: Build a docker image
-    #   inputs:
-    #     containerRegistry: 'jsturnbull-dockerhub'
-    #     repository: 'jsturnbull/currency-exchange-devops'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: '$(tag)'
+    - task: Docker@2
+      displayName: Build a docker image
+      inputs:
+        containerRegistry: 'jsturnbull-dockerhub'
+        repository: 'jsturnbull/currency-exchange-devops'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
